--- a/backup/restore_execute.html
+++ b/backup/restore_execute.html
@@ -20,21 +20,23 @@
     //Check login
     require_login();
 
+    $loginurl = get_login_url();
+
     //Check admin
     if (!empty($id)) {
         if (!has_capability('moodle/site:restore', get_context_instance(CONTEXT_COURSE, $id))) {
             if (empty($to)) {
-                print_error("cannotuseadminadminorteacher", '', "$CFG->wwwroot/login/index.php");
+                print_error("cannotuseadminadminorteacher", '', $loginurl);
             } else {
                 if (!has_capability('moodle/site:restore', get_context_instance(CONTEXT_COURSE, $to)) 
                     && !has_capability('moodle/site:import',  get_context_instance(CONTEXT_COURSE, $to))) {
-                    print_error("cannotuseadminadminorteacher", '', "$CFG->wwwroot/login/index.php");
+                    print_error("cannotuseadminadminorteacher", '', $loginurl);
                 }
             }
         }
     } else {
         if (!has_capability('moodle/site:restore', get_context_instance(CONTEXT_SYSTEM))) {
-            print_error("cannotuseadmin", '', "$CFG->wwwroot/login/index.php");
+            print_error("cannotuseadmin", '', $loginurl);
         }
     }
 
