--- a/lang/en_utf8/help/resource/frameifpossible.html
+++ b/lang/en_utf8/help/resource/frameifpossible.html
@@ -1,6 +1,8 @@
 <h1>Embedding files in a frame</h1>
-<p>This option will allow the file to be displayed in a frame, so that the Moodle navigation remains on the page in an upper frame.</p>
+<p>This option will allow the file to be displayed in a frame or object tag, so that the Moodle navigation remains on the top of the page.</p>
 
 <p>Note that this option is normally not necessary for media types such as movies, audio files and flash files, as without this option turned on they will be embedded within a navigable page.</p>
 
-<p>Note also that the use of frames can break accessibility, and so this option will be completely ignored if the user has chosen the "Screenreader" option in their profile.</p>
+<p>Note also that the use of frame tags can break accessibility, and so this option will be completely ignored if the user has chosen the "Screenreader" option in their profile.</p>
+
+<p>Note finally that the use of object tags is XHTML strict (frame tag isn't). However object tag could break some Moodle themes. In conclusion if the resource is well displayed with object tag, prefer it to frame tag.</p>
