resource: MDL-10021 change the wording "Yes, frame tag" "Yes, object tag" to "Yes, with frame" "Yes, without frame"

--- a/lang/en_utf8/help/resource/frameifpossible.html
+++ b/lang/en_utf8/help/resource/frameifpossible.html
@@ -1,8 +1,8 @@
-<h1>Embedding files in a frame</h1>
-<p>This option will allow the file to be displayed in a frame or object tag, so that the Moodle navigation remains on the top of the page.</p>
+<h1>Embedding files</h1>
+<p>This option will allow the file to be displayed in a frame or to be embedded within a navigable page, so that the Moodle navigation remains on the top of the page.</p>
 
 <p>Note that this option is normally not necessary for media types such as movies, audio files and flash files, as without this option turned on they will be embedded within a navigable page.</p>
 
-<p>Note also that the use of frame tags can break accessibility, and so this option will be completely ignored if the user has chosen the "Screenreader" option in their profile.</p>
+<p>Note also that the use of frame can break accessibility, and so this option will be completely ignored if the user has chosen the "Screenreader" option in their profile.</p>
 
-<p>Note finally that the use of object tags is XHTML strict (frame tag isn't). However object tag could break some Moodle themes. In conclusion if the resource is well displayed with object tag, prefer it to frame tag.</p>
+<p>Note finally that the use of frame isn't XHTML strict. However the "without frame" option could break some Moodle themes. In conclusion, if the resource is well displayed without frame, prefer this option to the "with frame" option.</p>
