--- a/lang/en_utf8/help/resource/frameifpossible.html
+++ b/lang/en_utf8/help/resource/frameifpossible.html
@@ -1,8 +1,5 @@
-<h1>Embedding files</h1>
+<h1>Keep page navigation visible on the same page</h1>
 <p>This option will allow the file to be displayed in a frame or to be embedded within a navigable page, so that the Moodle navigation remains on the top of the page.</p>
-
 <p>Note that this option is normally not necessary for media types such as movies, audio files and flash files, as without this option turned on they will be embedded within a navigable page.</p>
-
-<p>Note also that the use of frame can break accessibility, and so this option will be completely ignored if the user has chosen the "Screenreader" option in their profile.</p>
-
-<p>Note finally that the use of frame isn't XHTML strict. However the "without frame" option could break some Moodle themes. In conclusion, if the resource is well displayed without frame, prefer this option to the "with frame" option.</p>
+<p>The use of frames can break accessibility, so this option will be completely ignored if the user has chosen the "Screenreader" option in their profile.</p>
+<p>For standards compliance reasons, keeping page navigation visible without a frame is preferable to with a frame. However, certain Moodle themes are not compatible with the "Yes, without frame" option.</p>
