help files: MDL-14319 small XHTML fixes, as reported by Chris Bandy

--- a/lang/en_utf8/help/lesson/questiontypes.html
+++ b/lang/en_utf8/help/lesson/questiontypes.html
@@ -109,12 +109,12 @@
           a space). The ? (question-mark) means: preceding character zero or one time; 
           it is used here to match British English as well as US spelling.</p>
       <p><strong>Example 3.</strong> Question: &quot;Name an animal whose name is made 
-          of 3 letters and the middle letter is the vowel <em>a</em>&quot;. Anwer: 
+          of 3 letters and the middle letter is the vowel <em>a</em>&quot;. Answer: 
           &quot;[bcr]at&quot;. This will match: bat, cat and rat. </p>
       <h3>Detecting missing required words or character strings</h3>
       <p>Regular expressions alone cannot detect absent character strings, so you have to 
           add a little code in your Answer to take care of this. Any Teacher Answer which 
-          begins with a double hyphen will analyse the student&rsquo;s answer to find out 
+          begins with a double hyphen will analyze the student&rsquo;s answer to find out 
           whether the following string is present or absent. If present, the analysis 
           continues to the next question; if absent, the analysis stops and the relevant 
           Response message is displayed.</p>
@@ -189,7 +189,7 @@
     order as entered. This allows for <b>&quot;Ordered&quot;</b> questions to be
     constructed. Consider the question &quot; Put the following into the order
     they were born, the earliest first&quot; with the lists 1., 2., 3., 4. and
-    Longfellow, Lawrence, Lowell, Larkin. The second list is shuffed before
+    Longfellow, Lawrence, Lowell, Larkin. The second list is shuffled before
     being used in the question, of course.</p></li>
 
 <li><p><b>Numerical</b> This type of question requires a number as the answer.
@@ -221,5 +221,4 @@
     after the correct answer. That is the answers are ordered 3.33:3.34 (the
     &quot;correct&quot; answer) then 3:4 (the &quot;wrong&quot; answer, but
     not wildly wrong answer!).</p></li>
-</ul>
-
+</ol>
