--- a/lang/en_utf8/help/textformat.html
+++ b/lang/en_utf8/help/textformat.html
@@ -23,7 +23,7 @@
 <p>Smiley characters such as :-) will automatically become their graphical equivalents.</p>
 <p>You can even embed HTML code if you want to and it will be retained.</p>
 <p class="moreinfo"><a href="help.php?file=text.html">More info about Moodle auto-formatting</a></p>
-</ul>
+</div>
 
 
 <h2>2. HTML format</h2>
