Fixed a trivial typo in the quiz "item analysis table" help file - it was spelled as "stadard" which should be "standard"

--- a/lang/en_utf8/help/quiz/itemanalysis.html
+++ b/lang/en_utf8/help/quiz/itemanalysis.html
@@ -19,7 +19,7 @@ this parameter coincides with the percentage of users that answer the question c
 <h2>Standard Deviation (SD)</h2>
 
 <p>This parameter measures the spread of answers in the response population. If all users 
-answers the same, then SD=0. SD is calculated as the statistical stadard deviation for the 
+answers the same, then SD=0. SD is calculated as the statistical standard deviation for the 
 sample of fractional scores (achieved/maximum) at each particular question.</p>
 
 <h2>Discrimination Index (DI)</h2>
