multianswer help file: Many XHTML strict issues.

--- a/lang/en_utf8/help/qtype_multianswer/multianswer.html
+++ b/lang/en_utf8/help/qtype_multianswer/multianswer.html
@@ -35,10 +35,9 @@ Note that addresses like www.moodle.org and smileys :-) all work as normal:
  b) What grade would you give it? {3:NUMERICAL:=3:2}
 
 Good luck!
-</textarea>
-</p>
+</textarea></p>
 
-<p>This example will appear to students as follows:<p>
+<p>This example will appear to students as follows:</p>
 
 <div id="middle-column"><div><span id="maincontent"></span><div id="q6" class="que multianswer clearfix">
   <div class="info">
@@ -48,7 +47,7 @@ Good luck!
     </div>
     <div class="content">
       <div class="ablock clearfix"><label>This question consists of some text with an answer embedded right here <span><select name="resp3796_1"><option 
-  selected></option><option value="8919">Wrong answer</option><option value="8920">Another wrong answer</option><option value="8921">Correct answer</option><option value="8922">Answer that gives half the credit</option></select></span></label><label>and right after that you will have to deal with this short answer <input name="resp3796_2" size="33" /> </label><label> and finally we have a floating point number <input name="resp3796_3" size="4" /> </label>.<br />
+ selected="selected"></option><option value="8919">Wrong answer</option><option value="8920">Another wrong answer</option><option value="8921">Correct answer</option><option value="8922">Answer that gives half the credit</option></select></span></label><label>and right after that you will have to deal with this short answer <input name="resp3796_2" size="33" /> </label><label> and finally we have a floating point number <input name="resp3796_3" size="4" /> </label>.<br />
   <br />
   The multichoice question can also be shown in the vertical display of the standard moodle multiple choice<br />
   <br />
@@ -128,7 +127,7 @@ Good luck!
             <td class="c0 feedback">
             </td>
             <td class="c0 control">
-              <input  id="resp3796_8966" name="resp3796_5"  type="radio" value="8966" >
+              <input  id="resp3796_8966" name="resp3796_5"  type="radio" value="8966" />
             </td>
             <td class="c1 text ">
               <label for="resp3796_8966">
@@ -152,8 +151,8 @@ Good luck!
         <br />
         A shortanswer question where case must match. Write moodle in upper case letters <input    name="resp3435_6"  type="text" value="" size="6" /> <br />
       <br />Note that addresses like <a href="http://www.moodle.org" target="_blank">www.moodle.org</a> and smileys <img alt="smile" width="15" height="15" src="http://132.208.141.198/moodle_head/pix/s/smiley.gif" /> all work as normal:<br />
-       a) How good is this? <span><select name="resp3796_6"><option selected></option><option value="8968">Yes</option><option value="8969">No</option></select></span><label><br />
-       b) What grade would you give it? <input name="resp3796_7" size="1" > </label><br /><br />Good luck!
+       a) How good is this? <span><select name="resp3796_6"><option selected="selected"></option><option value="8968">Yes</option><option value="8969">No</option></select></span><label><br />
+       b) What grade would you give it? <input name="resp3796_7" size="1" /> </label><br /><br />Good luck!
     </div>
     <div class="grading">
     </div>
