--- a/calendar/event_new.html
+++ b/calendar/event_new.html
@@ -5,18 +5,18 @@
 <form method="post" action="event.php" id="eventform">
 <table cellpadding="5">
   <tr>
-    <td style="vertical-align: top; text-align: right;">
+    <td style="vertical-align: top; text-align: right;"><label for="eventname">
       <?php print_string('eventname', 'calendar'); ?>:
-    </td>
+    </label></td>
     <td>
-      <input type="text" name="name" size="67" value="<?php p($form->name); ?>" />
+      <input type="text" name="name" size="67" id="eventname" value="<?php p($form->name); ?>" />
       <?php if (isset($err['name'])) formerr($err['name']); ?>
     </td>
   </tr>
   <tr>
-    <td style="vertical-align: top; text-align: right;">
+    <td style="vertical-align: top; text-align: right;"><label for="edit-description">
       <?php print_string('eventdescription', 'calendar'); ?>:
-    </td>
+    </label></td>
     <td>
     <?php
         print_textarea($usehtmleditor, 20, 65, 630, 300, "description", $form->description);
@@ -55,8 +55,9 @@
       <div>
         <input type="radio" name="duration" value="2" id="duration_minutes" <?php if($form->duration == 2) echo 'checked="checked"'; ?>/>
         <label for="duration_minutes"><?php print_string('durationminutes', 'calendar'); ?></label>
-        <input type="text" name="minutes" size="3" value="<?php p($form->minutes); ?>" />
+        <input type="text" name="minutes" size="3" value="<?php p($form->minutes); ?>" id="minutes"/>
         <?php if (isset($err['minutes'])) formerr($err['minutes']); ?>
+        <label class="accesshide" for="minutes"><?php print_string('minutes') ?></label>
       </div>
     </td>
   </tr>
@@ -77,8 +78,8 @@
         <label for="repeat_yes">
           <?php print_string('repeatweeksl', 'calendar'); ?>
         </label>
-        <input type="text" name="repeats" size="2" value="<?php p($form->repeats); ?>" />
-        <?php print_string('repeatweeksr', 'calendar'); ?>
+        <input id="repeats" type="text" name="repeats" size="2" value="<?php p($form->repeats); ?>" />
+        <label for="repeats"><?php print_string('repeatweeksr', 'calendar'); ?></label>
         <?php if (isset($err['repeats'])) formerr($err['repeats']); ?>
       </div>
     </td>
