Add missing Id tags to all files under question, to help the unmerged files script.

--- a/question/comment.html
+++ b/question/comment.html
@@ -1,4 +1,4 @@
-<?php
+<?php  // $Id$
 // This template determines the layout of the manual grading form. It is
 // included by both by question_print_comment_box method from questionlib.php,
 // and the print_questions_and_form method from the manual grading report.
