--- a/question/type/question.html
+++ b/question/type/question.html
@@ -1,4 +1,4 @@
-<?php
+<?php  // $Id$
 /* This template determines the overall layout of a question. It is included by the 
  * print_question() method.
  */
