Fix drift with CVS

--- a/lang/en_utf8/help/quiz/popup.html
+++ b/lang/en_utf8/help/quiz/popup.html
@@ -1,8 +1,7 @@
-<h1>Display in a "secure" window</h1>
+<h1>Use a 'secure' popup window for attempts</h1>
 
-<p>The "secure" window tries to provide a little more security for quizzes 
-   (making copying and cheating more difficult) by restricting some of the things
-   that students can do with their browsers.</p>
+<p>The 'secure' window tries to make some simpler forms of copying and cheating
+more difficult during quiz attempts.</p>
 
 <p>What happens is that:</p>
  <ul>
@@ -12,10 +11,10 @@
      <li>Some keyboard commands are prevented.</li>
  </ul>
 
-<p>NOTE: <b>This security is NOT watertight</b>. Do NOT rely on these protections 
+<p>NOTE: <b>This security is not watertight</b>. Do not rely on these protections 
    as your sole strategy.  It is impossible to implement complete protection 
    of quizzes in a web environment so please do not rely on this option if 
-   you are really worried about students cheating.   Other strategies you can 
+   you are really worried about students cheating. Other strategies you can 
    try are to create really large databases of questions from which you 
    randomly choose questions, or even better, rethink your overall assessment 
    to put more value on constructive forms of activity such as forum discussions, 
