--- a/lang/en_utf8/help/quiz/decimalpoints.html
+++ b/lang/en_utf8/help/quiz/decimalpoints.html
@@ -1,9 +1,9 @@
-<h1>Decimal digits</h1>
+<h1>Decimal places</h1>
 
 <p>By using this setting you can select the number of digits that should be
 shown after the decimal point when displaying student scores or grades.
-For example choosing '0' means the displayed grades will be rounded to integers.
-</p><p>
-This setting only effects the display of grades. It does not affect the internal
-calculations and rounding of the grades.
-</p>
+For example choosing '0' means the displayed grades will be rounded to integers.</p>
+
+<p>This setting only effects the display of grades. It does not affect the grades
+stored in the database, nor the internal calculations, which are always carried
+out to full precision.</p>
