--- a/lang/en_utf8/help/quiz/mods.html
+++ b/lang/en_utf8/help/quiz/mods.html
@@ -1,11 +1,12 @@
-<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif" />&nbsp;<b>Quizzes</b></p>
-<div class="indent">
-This module allows the teacher to design and set quiz tests, consisting of 
-multiple choice, true-false, and short answer questions.  These 
-questions are kept in a categorised database, and can be re-used
-within courses and even between courses.  Quizzes can allow 
-multiple attempts.  Each attempt is automatically marked, and the 
-teacher can choose whether to give feedback or to show correct answers.
-This module includes grading facilities.
-</div>
+<h2><img alt="" src="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif" /> Quizzes</h2>
 
+<p>This module allows the teacher to design and set quiz tests. The quiz can 
+comprise questonis of a variety of type, including multiple choice, short answer
+and matching.</p>
+
+<p>Quizzes can allow one or more attempts, with many options for when students
+can attempts the quiz, and what they see when they do.</p>
+
+<p>Most questions are graded automatically, however, there is a facility for
+questions that have to be graded manually by the teacher. The teacher can also
+manually override the automatically awarded grade for any question.</p>
