--- a/lang/en_utf8/help/quiz/timedelay1.html
+++ b/lang/en_utf8/help/quiz/timedelay1.html
@@ -1,4 +1,5 @@
 <h1>Time Delay between first and second attempt</h1>
 
-<p>If you set a time delay, then a student has to wait for that time before they can attempt a quiz after the first attempt.</p>
-   
+<p>If you set a time delay, then the student has to wait for that amount of time
+to pass after the end of their first attempt before they can start their second attempt.</p>
+
