--- a/lang/en_utf8/help/quiz/timedelay2.html
+++ b/lang/en_utf8/help/quiz/timedelay2.html
@@ -1,4 +1,5 @@
 <h1>Time Delay between additional quiz attempts</h1>
 
-<p>If you set a time delay here, then a student has to wait for that time before they can attempt their third or later attempts.</p>
+<p>If you set a time delay, then the student has to wait for that amount of time
+to pass after the end of their previous attempt before they can start their third or later attempt.</p>
 
