--- a/lang/en_utf8/help/quiz/timelimit.html
+++ b/lang/en_utf8/help/quiz/timelimit.html
@@ -1,17 +1,10 @@
 <p align="center"><strong>Time limit</strong></p>
 
-<p>By default, quizzes do not have a time limit, which allows
-   students as much time as they need to complete the quiz.</p>
+<p>By default, quizzes do not have a time limit, which allows students as much
+time as they need to complete the quiz, providing they finish before any close
+date.</p>
 
-<p>If you do specify a time limit, then several things are done to try and
-   ensure that quizzes are completed within that time:</p>
-
-<ul>
-  <li>Javascript support in the browser becomes mandatory - this allows
-      the timer to work correctly</li>
-  <li>A floating timer window is shown with a countdown</li>
-  <li>When the timer has run out, the quiz is submitted automatically
-      with whatever answers have been filled in so far</li>
-  <li>If a student manages to cheat and spends more than 60 seconds
-      over the allotted time then the quiz is automatically graded zero</li>
-</ul>
+<p>If you do specify a time limit, a countdown clock appears on-screen, and the
+quiz is automatically submitted when the time runs out. With a time limit, the
+student must submit their attempt before the time limit, or they will not
+receive a grade.</p>
