--- a/lang/en_utf8/help/quiz/timeopen.html
+++ b/lang/en_utf8/help/quiz/timeopen.html
@@ -1,5 +1,5 @@
 <h1>Opening and closing the quiz</h1>
 
-<p>You can specify times when the quiz is accessible for people to make attempts.</p>
-
-<p>Before the opening time, and after the closing time, the quiz will be unavailable.</p>
+<p>You can specify a (possbily open-ended) range of times during which people
+may attempt the quiz. Outside these times, the quiz may not be attempted, but
+the person creating the quiz may preview it, to ensure it works as intended.</p>
