documentation/workshop MDL-2605 - bad helpfile link

--- a/lang/en_utf8/help/workshop/index.html
+++ b/lang/en_utf8/help/workshop/index.html
@@ -2,7 +2,7 @@
 <ul>
   <li><a href="help.php?module=workshop&amp;file=addcommenttobank.html">Add Comment to Bank</a></li>
   <li><a href="help.php?module=workshop&amp;file=agreeassessments.html">Agreement of Assessments</a></li>
-  <li><a href="help.php?module=workshop&amp;file=graded.html">A Graded Peer Assignment</a></li>
+  <li><a href="help.php?module=workshop&amp;file=grading.html">A Graded Peer Assignment</a></li>
   <li><a href="help.php?module=workshop&amp;file=addingacomment.html">Adding a Comment</a></li>
   <li><a href="help.php?module=workshop&amp;file=analysisofassessments.html">Analysis of Assessments</a></li>
   <li><a href="help.php?module=workshop&amp;file=anonymous.html">Anonymous Grading</a></li>
