moodle_page: MDL-12212 Kill legacy url_... and blocks_... methods Start calling $PAGE->set_url in all the places it will be necessary Start of a stub implementation of $PAGE->blocks to stop other things breaking Remove some of the special case methods in admin_page

--- a/blocks/rss_client/config_instance.html
+++ b/blocks/rss_client/config_instance.html
@@ -103,9 +103,9 @@ print_box_start();
                 if (has_capability('block/rss_client:createprivatefeeds', $context)
                         || has_capability('block/rss_client:createsharedfeeds', $context)) {
 
-                    $addrsspage = $page->url_get_full(array('instanceid' => $this->instance->id, 
+                    $addrsspage = $page->url->out(array('instanceid' => $this->instance->id,
                                                             'sesskey' => sesskey(),
-                                                            'blockaction' => 'config', 
+                                                            'blockaction' => 'config',
                                                             'currentaction' => 'managefeeds',
                                                             'id' => $id));
                     print '&nbsp;<a href="'.$addrsspage.'">'. get_string('editnewsfeeds', 'block_rss_client') .'</a><br />';
