blocks: MDL-19010 Fix further blocks-related breakage, including removing all references to blocks_insance_old outside blocklib.php

--- a/blocks/rss_client/config_instance.html
+++ b/blocks/rss_client/config_instance.html
@@ -93,8 +93,9 @@ print_box_start();
                     print $checkbox . $feedtitle .'<br />'."\n";
                 }
             } else {
-                // TODO
-                if (empty($this->instance->pinned)) {
+                // TODO - temporary hack to get the block context only if it already exists.
+                global $DB;
+                if ($DB->record_exists('context', array('contextlevel' => CONTEXT_BLOCK, 'instanceid' => $this->instance->id))) {
                     $context = get_context_instance(CONTEXT_BLOCK, $this->instance->id);
                 } else {
                     $context = get_context_instance(CONTEXT_SYSTEM); // pinned blocks do not have own context
@@ -174,8 +175,9 @@ print_box_start();
 } else {
   global $act, $url, $rssid, $preferredtitle, $shared;
   print '</div></form></div>';   // Closes off page form
-  // TODO
-  if (empty($this->instance->pinned)) {
+  // TODO - temporary hack to get the block context only if it already exists.
+  global $DB;
+  if ($DB->record_exists('context', array('contextlevel' => CONTEXT_BLOCK, 'instanceid' => $this->instance->id))) {
     $context = get_context_instance(CONTEXT_BLOCK, $this->instance->id);
   } else {
     $context = get_context_instance(CONTEXT_SYSTEM); // pinned blocks do not have own context
