MDL-45981 auth_cas: add cURL SSL versions dropdown

--- a/auth/cas/config.html
+++ b/auth/cas/config.html
@@ -220,10 +220,32 @@ if (!ldap_paged_results_supported($config->ldap_version)) {
     </td>
 </tr>
 <tr valign="top" class="required">
-    <td align="right"><label for="curl_ssl_version"><?php print_string('auth_cas_curl_ssl_version_key', 'auth_cas') ?>: </label></td>
+    <td align="right"><label for="curl_ ssl_version"><?php print_string('auth_cas_curl_ssl_version_key', 'auth_cas') ?>: </label></td>
     <td>
-        <input name="curl_ssl_version" id="curl_ssl_version" type="text" size="3" value="<?php echo $config->curl_ssl_version ?>" />
-        <?php if (isset($err['curl_ssl_version'])) echo $OUTPUT->error_text($err['curl_ssl_version']); ?>
+        <?php
+            $sslversions = array();
+            $sslversions[''] = get_string('auth_cas_curl_ssl_version_default', 'auth_cas');
+            if (defined('CURL_SSLVERSION_TLSv1')) {
+                $sslversions[CURL_SSLVERSION_TLSv1] = get_string('auth_cas_curl_ssl_version_TLSv1x', 'auth_cas');
+            }
+            if (defined('CURL_SSLVERSION_TLSv1_0')) {
+                $sslversions[CURL_SSLVERSION_TLSv1_0] = get_string('auth_cas_curl_ssl_version_TLSv10', 'auth_cas');
+            }
+            if (defined('CURL_SSLVERSION_TLSv1_1')) {
+                $sslversions[CURL_SSLVERSION_TLSv1_1] = get_string('auth_cas_curl_ssl_version_TLSv11', 'auth_cas');
+            }
+            if (defined('CURL_SSLVERSION_TLSv1_2')) {
+                $sslversions[CURL_SSLVERSION_TLSv1_2] = get_string('auth_cas_curl_ssl_version_TLSv12', 'auth_cas');
+            }
+            if (defined('CURL_SSLVERSION_SSLv2')) {
+                $sslversions[CURL_SSLVERSION_SSLv2] = get_string('auth_cas_curl_ssl_version_SSLv2', 'auth_cas');
+            }
+            if (defined('CURL_SSLVERSION_SSLv3')) {
+                $sslversions[CURL_SSLVERSION_SSLv3] = get_string('auth_cas_curl_ssl_version_SSLv3', 'auth_cas');
+            }
+            echo html_writer::select($sslversions, 'curl_ssl_version', $config->curl_ssl_version, false);
+            if (isset($err['curl_ssl_version'])) echo $OUTPUT->error_text($err['curl_ssl_version']);
+        ?>
     </td>
     <td>
         <?php print_string('auth_cas_curl_ssl_version', 'auth_cas') ?>
